# matjongwon

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: main.yml
backend/: docker-compose.yml  pyproject.toml
backend/backend/: utils.py
backend/backend/Places/: models.py  views.py
backend/backend/Places/management/commands/: loadjson.py
backend/backend/backend/: pagination.py  routers.py  settings.py  urls.py
backend/backend/github_auth/: urls.py  views.py
backend/backend/like/: admin.py  models.py  urls.py  utils.py  views.py
backend/backend/like/migrations/: 0001_initial.py  0002_alter_dislike_place_alter_like_place.py
backend/backend/placeUpdater/: updater.py
backend/backend/places/: models.py  serializers.py  urls.py  views.py
backend/backend/places/migrations/: 0001_initial.py  0002_alter_place_table.py
backend/backend/search/: documents.py  urls.py  views.py
backend/backend/social_login/: urls.py  views.py
backend/backend/users/: models.py  utils.py
backend/backend/users/migrations/: 0001_initial.py
crawling/naver-crawl/: README.md  pyproject.toml
crawling/naver-crawl/naver_crawl/: crawl.ipynb
frontend/: index.html  package-lock.json  package.json  vue.config.js
frontend/config/: dev.env.js  index.js  prod.env.js
frontend/src/: main.js
frontend/src/components/: GitHubCallback.vue  KakaoMap.vue  LikeButton.vue  StoreCard.vue  StoreSummaryCard.vue
frontend/src/layout/: AppHeader.vue
frontend/src/router/: index.js
scrapers/: README.md  naver_scraper.py  search_googlemap.py  search_kakaomap.py
(+9 files in other folders)
