[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Saron Kim <kasrlmoojoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
jsonfield = "^3.1.0"
APScheduler = "^3.9.1.post1"
mysqlclient = "^2.1.1"
django-cors-headers = "^3.14.0"
djongo = "^1.3.6"
dnspython = "^2.3.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.2"
elasticsearch-dsl = "^7.4.1"
django-elasticsearch-dsl = "^7.3"
elasticsearch = "7.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
